Change opening hours

--- a/fitness.html
+++ b/fitness.html
@@ -202,7 +202,7 @@
                             <div class="modal-body">
                                 <p>
                                     Für Einführungen, Überprüfungen des Trainingsplanes und bei allgemeinen Fragen
-                                    betreuen wir Sie <a href="index.html#SpezielleOeffnungszeiten">zu den unter "Betreut" angegebenen Öffnungszeiten</a> spezifisch im Fitnessraum
+                                    betreuen wir Sie <a href="index.html#NeueOeffnungszeiten">zu den unter "Betreut" angegebenen Öffnungszeiten</a> spezifisch im Fitnessraum
                                 </p>
                             </div>
                             <div class="modal-footer">
@@ -223,7 +223,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>     
+            <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
 </div>
