--- a/kontakt.html
+++ b/kontakt.html
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>  
+            <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
 </div>
