--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -187,7 +187,7 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
             <h2>Geschäftsöffnungszeiten</h2>
-            <p>Bitte beachten Sie die <a href="index.html#SpezielleOeffnungszeiten">geänderten Öffnungszeiten ab 20.02.2017</a></p>  
+            <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
 </div>
