Change mailto link text, layout finetuning

--- a/barbara-longo.html
+++ b/barbara-longo.html
@@ -110,7 +110,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Barbara&nbsp;Longo</h2>
-            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a></p>
+            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
