--- a/melina-duerr.html
+++ b/melina-duerr.html
@@ -112,7 +112,7 @@
             <h2>Melina&nbsp;Dürr</h2>
             <p>
                 Dipl. Physiotherapeutin FH<br/>
-                <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
+                <a href="mailto:melina.duerr@physiomovimento.ch">E-Mail</a>
             </p>
         </div>
     </div>
