--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -112,7 +112,7 @@
             <h2>Reto&nbsp;Maurer</h2>
             <p>
                 Sportwissenschaftler&nbsp;EHSM<br/>
-                <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
+                <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
             </p>
         </div>
     </div>
