--- a/team.html
+++ b/team.html
@@ -111,9 +111,12 @@
                     <p>
                     <h1>Barbara&nbsp;Longo</h1>
                     <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
-                        <a href="mailto:barbara.longo@physiomovimento.ch">barbara.longo@physiomovimento.ch</a>
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
                     </p>
+                    <p>                        
+                        <a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a>
+                    </p>
+                    <p>
                     <a href="barbara-longo.html" role="button">
                         Mehr&hellip;
                     </a>
@@ -127,8 +130,10 @@
                     <p>
                     <h1>Melina&nbsp;Dürr</h1>
                     <p>
-                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH<br/>
-                        <a href="mailto:melina.duerr@physiomovimento.ch">melina.duerr@physiomovimento.ch</a>
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;FH
+                    </p>
+                    <p>
+                        <a href="mailto:melina.duerr@physiomovimento.ch">E-Mail</a>
                     </p>
                     <a href="melina-duerr.html" role="button">
                         Mehr&hellip;
@@ -145,8 +150,10 @@
                     <p>
                     <h1>Reto&nbsp;Maurer</h1>
                     <p>
-                        Sportwissenschaftler&nbsp;EHSM<br/>
-                        <a href="mailto:reto.maurer@physiomovimento.ch">reto.maurer@physiomovimento.ch</a>
+                        Sportwissenschaftler&nbsp;EHSM
+                    </p>
+                    <p>                        
+                        <a href="mailto:reto.maurer@physiomovimento.ch">E-Mail</a>
                     </p>
                     <a href="reto-maurer.html" role="button">
                         Mehr&hellip; 
@@ -159,14 +166,16 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <p>
-                    <h1>Ursula&nbsp;Hövelmann</h1>
+                    <h1>Ursula Hövelmann</h1>
                     <p>
                         Physiotherapeutin (Bachelor NL/Master of Profession)
-                        <a href="mailto:ursula.hoevelmann@physiomovimento.ch">ursula.hoevelmann@physiomovimento.ch</a>
+                        <br/>
+                        <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a>
+                        <br/>
+                        <a href="ursula-hoevelmann.html" role="button">
+                            Mehr&hellip;
+                        </a>
                     </p>
-                    <a href="ursula-hoevelmann.html" role="button">
-                        Mehr&hellip;
-                    </a>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/ursula.jpg">
             </div>
@@ -179,8 +188,10 @@
                     <p>
                     <h1>Vera&nbsp;Schmidt</h1>
                     <p>
-                        Physiotherapeutin i.A.<br/>
-                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                        Physiotherapeutin i.A.
+                    </p>
+                    <p>                        
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
@@ -192,8 +203,10 @@
                     <p>
                     <h1>Nazmije&nbsp;Demusi</h1>
                     <p>
-                        Raumpflegerin<br/>
-                        <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
+                        Raumpflegerin
+                    </p>
+                    <p>                        
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
                     </p>
                 </div>
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
