--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="col-sm-6">
             <div class="new well">
                 <h1>Neue Öffnungszeiten</h1>
-                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet</a>!
+                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>
             </div>
         </div>
         <div class="col-sm-6">
