--- a/index.html
+++ b/index.html
@@ -268,8 +268,9 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Neue Öffnungszeiten</h1>
-                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>
+                <h1>Vortrag mit Frühlingsapéro</h1>
+                <p>Sie sind herzlich eingeladen:<br/>Mi, 29.03.2017 ab 18.30 Uhr, <a href="doc/Fruehlingsapero.pdf" class="preliminary">Einladung hier (PDF, 134 KB).</a></p>
+                <p>Wir freuen uns auf Ihr Erscheinen!</p>
             </div>
         </div>
         <div class="col-sm-6">
