--- a/physio.html
+++ b/physio.html
@@ -90,6 +90,7 @@
                 <li>Medizinische Trainingstherapie (MTT)</li>
                 <li>Leistungsdiagnostik auf Anfrage</li>
                 <li>Konservative und postoperative Rehabilitation</li>
+                <li>Lymphdrainage</li>
                 <li>Manuelle Triggerpunkttherapie</li>
                 <li>Kinesiotaping</li>
                 <li>Medizinische Massage</li>
