Add space between opening hours columns, remove fruehlingsapero link and pdf file

--- a/index.html
+++ b/index.html
@@ -268,9 +268,8 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Vortrag mit Frühlingsapéro</h1>
-                <p>Sie sind herzlich eingeladen:<br/>Mi, 29.03.2017 ab 18.30 Uhr, <a href="doc/Fruehlingsapero.pdf" class="preliminary">Einladung hier (PDF, 134 KB).</a></p>
-                <p>Wir freuen uns auf Ihr Erscheinen!</p>
+                <h1>Längere Öffnungszeiten</h1>
+                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>
             </div>
         </div>
         <div class="col-sm-6">
@@ -321,37 +320,44 @@
             <table>
                 <tr>
                     <th/>
-                    <th colspan="">Offen</th>                    
+                    <th colspan="">Offen</th> 
+                    <th>&nbsp;</th>                   
                     <th>Betreut</th>                                        
                 </tr>
                 <tr>
                     <td nowrap='true'>Mo:</td>
                     <td>07:30 – 21:00</td>
+                    <td>&nbsp;</td>
                     <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Di:</td>
                     <td>08:00 – 21:00</td>
+                    <td>&nbsp;</td>
                     <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Mi:</td>
                     <td>07:30 – 21:00</td>
+                    <td>&nbsp;</td>
                     <td>14.30 - 21.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Do:</td>
                     <td>07:30 – 21:00</td>
+                    <td>&nbsp;</td>
                     <td>10.00 - 12.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Fr:</td>
                     <td>08:00 – 20:00</td>
+                    <td>&nbsp;</td>
                     <td>14.00 - 20.00</td>
                 </tr>
                 <tr>
                     <td nowrap='true'>Sa:</td>
                     <td>09:00 – 13:00</td>
+                    <td>&nbsp;</td>
                     <td>09.00 - 13.00</td>
                 </tr>
             </table>                        
