--- a/fitness.html
+++ b/fitness.html
@@ -165,7 +165,7 @@
                                 <h1>Bedingungen</h1>
                                 <ul>
                                     <li>Vermittlungsrabatt: 10%<br/></li>
-                                    <li>Nahtlose Erneuerung: Fr. 20.– Reduktion</li>
+                                    <li>Nahtlose Erneuerung: Reduktion von 5% vom neu abgeschlossenen Abopreis</li>
                                     <li>Auszubildende bis 25 Jahre (gegen Vorweisen eines Ausweises): 10%<br/></li>
                                     <li>Mindestalter 16 Jahre</li>
                                     <li>Wird nach dem Einführungstraining kein Abo abgeschlossen, verrechnen wir einen
