Add link to easter opening hours

--- a/index.html
+++ b/index.html
@@ -315,8 +315,10 @@
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
          
+
             <a name="NeueOeffnungszeiten"></a>
             <h2 class="preliminary">Öffnungszeiten</h2>
+            <p>Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
             <table>
                 <tr>
                     <th/>
