Hide easter opening hours

--- a/index.html
+++ b/index.html
@@ -268,8 +268,10 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Spezielle Öffnungszeiten über die Ostertage</h1>
-                <p>Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
+                <h1>Längere Öffnungszeiten</h1>
+                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
+                <h1 class="hidden">Spezielle Öffnungszeiten über die Ostertage</h1>
+                <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -318,7 +320,7 @@
 
             <a name="NeueOeffnungszeiten"></a>
             <h2 class="preliminary">Öffnungszeiten</h2>
-            <p>Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
+            <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
             <table>
                 <tr>
                     <th/>
