Add May 1 infos

--- a/index.html
+++ b/index.html
@@ -268,10 +268,10 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Längere Öffnungszeiten</h1>
-                <p>Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
-                <h1 class="hidden">Spezielle Öffnungszeiten über die Ostertage</h1>
-                <p class="hidden">Bitte beachten Sie die speziellen <a href="docs/Spezielle-Oeffnungszeiten-Ostern-2017.pdf" class="preliminary" target="_blank">Öffnungszeiten Ostern 2017.</a></p>
+                <h1 class="hidden">Längere Öffnungszeiten</h1>
+                <p class="hidden">Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
+                <h1>1. Mai: Geschlossen</h1>
+                <p>Bitte beachten Sie dass wir am <a href="docs/Tag-der-Arbeit.pdf" class="preliminary" target="_blank">Tag der Arbeit (Montag, 1. Mai 2017) geschlossen haben.</a></p>
             </div>
         </div>
         <div class="col-sm-6">
