--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
             <div class="new well">
                 <h1 class="hidden">Längere Öffnungszeiten</h1>
                 <p class="hidden">Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
-                <h1>1. Mai: Geschlossen</h1>
-                <p>Bitte beachten Sie dass wir am <a href="docs/Tag-der-Arbeit.pdf" class="preliminary" target="_blank">Tag der Arbeit (Montag, 1. Mai 2017) geschlossen haben.</a></p>
+                <h1>Auffahrt und Pfingsten</h1>
+                <p>Auffahrts-Donnerstag, 25.5. und Pfingstmontag, 5.6.2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a> Besten Dank für Ihr Verständnis!</p>
             </div>
         </div>
         <div class="col-sm-6">
