--- a/fitness.html
+++ b/fitness.html
@@ -162,7 +162,7 @@
                                         <td align="right">Fr. 1380.–</td>
                                     </tr>
                                 </table>
-                                <h1>Bedingungen</h1>
+                                <h1>Infos</h1>
                                 <ul>
                                     <li>Vermittlungsrabatt: 10%<br/></li>
                                     <li>Nahtlose Erneuerung: Reduktion von 5% vom neu abgeschlossenen Abopreis</li>
