--- a/team.html
+++ b/team.html
@@ -168,7 +168,7 @@
                     <p>
                     <h1>Ursula Hövelmann</h1>
                     <p>
-                        Physiotherapeutin (Bachelor NL/Master of Profession)
+                        Physiotherapeutin Master of Profession
                         <br/>
                         <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a>
                         <br/>
