Add Medizinische Massage well

--- a/index.html
+++ b/index.html
@@ -276,11 +276,16 @@
         </div>
         <div class="col-sm-6">
             <div class="new well">
-                <h1>Fotos zum Umbau</h1>
-                <p>Verfolgen Sie den Aufbau der Räumlichkeiten:</p>
-                <a  href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button" target="_blank">
+                <h1 class="hidden">Fotos zum Umbau</h1>
+                <p class="hidden">Verfolgen Sie den Aufbau der Räumlichkeiten:</p>
+                <a class="hidden" href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button" target="_blank">
                     Fotoalbum zum Baufortschritt
                 </a>
+
+                <h1>Neu: Medizinische Massage</h1>
+                <p>Neu ab Mitte Juni bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. 
+                <p>Krankenkassenanerkannt (EMR / ASCA)</p>
+
             </div>
         </div>
     </div>
