--- a/index.html
+++ b/index.html
@@ -281,11 +281,8 @@
                 <a class="hidden" href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button" target="_blank">
                     Fotoalbum zum Baufortschritt
                 </a>
-
                 <h1>Neu: Medizinische Massage</h1>
-                <p>Neu ab Mitte Juni bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. 
-                <p>Krankenkassenanerkannt (EMR / ASCA)</p>
-
+                <p>Ab 10. Juni bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. Krankenkassenanerkannt (EMR / ASCA)</p>
             </div>
         </div>
     </div>
