Add Medizinische Massage, Dejan Jonovic

--- a/dejan-jonovic.html
+++ b/dejan-jonovic.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Team | Barbara Longo</title>
+    <title>Physio Movimento | Team | Dejan Jonovic</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -106,12 +106,15 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/barbara.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/dejan.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Barbara&nbsp;Longo</h2>
-            <p>Dipl. Physiotherapeutin FH<br/><a href="mailto:barbara.longo@physiomovimento.ch">E-Mail</a></p>
+            <h2>Dejan&nbsp;Jonovic</h2>
+            <p>
+                Medizinischer&nbsp;Masseur&nbsp;IKMP<br/>
+                <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+            </p>
         </div>
     </div>
     <div class="row section">
@@ -120,22 +123,33 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">Seit 2016</div>
-        <div class="col-xs-9">Mitinhaberin Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2010-2016</div>
-        <div class="col-xs-9">Selbständige Tätigkeit in Niederdorf</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2007-2010</div>
-        <div class="col-xs-9">Tätigkeit in Privatpraxen mit Schwerpunkt Orthopädie, Traumatologie, Rheumatologie</div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">1998-2007</div>
+        <div class="col-lg-2 col-xs-3">Seit 2017</div>
         <div class="col-xs-9">
-            Kantonsspital Bruderholz mit Schwerpunkt Rückenrehabilitation, Orthopädie, Traumatologie, Rheumatologie.
-            Fachbereichsverantwortung Rückenrehabilitation, Stv. Leitung gesamte Rehabilitation
+            Medizinischer Masseur Movimento Physio- und Trainingstherapie GmbH Oberdorf
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2016</div>
+        <div class="col-xs-9">
+            Praktikum als Medizinischer Masseur RehaClinic Bad Zurzach
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">1998-2015</div>
+        <div class="col-xs-9">
+            Diverse Tätigkeiten als Spengler- / Sanitärinstallateur und Hauswart
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3">2005-2006</div>
+        <div class="col-xs-9">
+            Praktika in einem Jugendheim und Waisenhaus
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-2 col-xs-3"></div>
+        <div class="col-xs-9">
+            Tätigkeiten als Jugendgruppenleiter und bis heute in der Feuerwehr
         </div>
     </div>
     <div class="row section">
@@ -145,13 +159,11 @@
     </div>
     <div class="row">
         <ul>
-            <li>ESP-Themenkurs Training bei kardio-pulmonalen Erkrankungen</li>
-            <li>TRX Sports Medicine Suspension Trainer L2</li>
-            <li>ESP-Themenkurs Training bei Diabetes, Übergewicht, Stoffwechselerkrankungen</li>
-            <li>Maitland-Themenkurs: Funktionelle glenohumerale Instabilität</li>
-            <li>Zusatzausbildung im Umgang mit chronifizierenden Rückenschmerzen</li>
-            <li>Zusatzausbildung in Manueller Therapie Maitland Konzept, Level 2b</li>
-            <li>Diplom Physiotherapie Kantonsspital Basel 1998</li>
+            <li>Taping / Kinesiotaping</li>
+            <li>Sportmassage</li>
+            <li>Lasertherapie</li>
+            <li>Medizinischer Masseur IKMP Therwil 2017</li>
+            <li>Spengler-und Sanitärinstallateur 1997</li>
         </ul>
     </div>
     <div class="row">
