--- a/team.html
+++ b/team.html
@@ -38,6 +38,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
+                <li><a href="medizinische-massage.html">Med. Massage</a></li>                
                 <li><a href="fitness.html">Fitness</a></li>
                 <li class="active"><a href="#">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
@@ -186,6 +187,24 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <p>
+                    <h1>Dejan&nbsp;Jonovic</h1>
+                    <p>
+                        Medizinischer&nbsp;Masseur IKMP
+                    </p>
+                    <p>                        
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    </p>
+                    <a href="dejan-jonovic.html" role="button">
+                        Mehr&hellip;
+                    </a>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/dejan.jpg">
+            </div>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
                     <h1>Vera&nbsp;Schmidt</h1>
                     <p>
                         Physiotherapeutin i.A.
@@ -197,6 +216,9 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
             </div>
         </div>
+        
+    </div>
+    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
@@ -212,8 +234,6 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
             </div>
         </div>
-    </div>
-    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
