--- a/medizinische-massage.html
+++ b/medizinische-massage.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon image_src" href="apple-touch-icon.png">
 
-    <title>Physio Movimento | Physio</title>
+    <title>Physio Movimento | Medizinische Massage</title>
 
     <link href="css/bootstrap-custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -39,8 +39,8 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="#">Physio</a></li>
-                <li><a href="medizinische-massage.html">Med. Massage</a></li>                
+                <li><a href="physio.html">Physio</a></li>
+                <li class="active"><a href="#">Med. Massage</a></li>                
                 <li><a href="fitness.html">Fitness</a></li>
                 <li><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
@@ -48,54 +48,32 @@
         </div>
     </nav>
 </div>
-<a href="https://goo.gl/photos/vCBQb7pj5NhcQBW59" target="_blank">
+<a href="#">
     <div class="jcarousel-wrapper">
         <div class="jcarousel">
             <ul>                            
-                <li><img src="img/physio2.jpeg" alt="Physiotherapie Momentaufnahme 2"></li>
-                <li><img src="img/physio6.jpeg" alt="Physiotherapie Momentaufnahme 6"></li>                
-                <li><img src="img/physio5.jpeg" alt="Physiotherapie Momentaufnahme 5"></li>
-                <li><img src="img/physio3.jpeg" alt="Physiotherapie Momentaufnahme 3"></li>                                                                                                    
-                <li><img src="img/physio1.jpeg" alt="Physiotherapie Momentaufnahme 1"></li>                                                              
-                <li><img src="img/physio4.jpeg" alt="Physiotherapie Momentaufnahme 4"></li>                              
+                <li><img src="img/physio3.jpeg" alt="Medizinischen Massage Momentaufnahme 1"></li>
+                <li><img src="img/physio7.jpeg" alt="Medizinischen Massage Momentaufnahme 2"></li>
             </ul>
         </div>
+        <!--
         <a href="#" class="jcarousel-control-prev">&lsaquo;</a>
         <a href="#" class="jcarousel-control-next">&rsaquo;</a>
         <p class="jcarousel-pagination"></p>
+        -->
     </div>
 </a>
 <div class="container-fluid">
     <div class="row">
 
         <div class="section col-xs-12">
-            <h1>Physiotherapie</h1>
+            <h1>Medizinische Massage</h1>
             <p>
-                Physiotherapie bietet eine Vielzahl von Methoden, die unter anderem darauf zielen, Beeinträchtigungen des
-                Bewegungsapparates zu reduzieren.
+                Medizinische Massage wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparates eingesetzt.
             </p>
             <p>
-                Egal, ob Ihre Probleme durch einen Unfall, eine Krankheit oder durch Verhaltensfehler entstanden sind,
-                wir gehen Ihren Beschwerden auf den Grund. Nach einer körperlichen Befunderhebung legen wir mit Ihnen
-                individuelle Ziele fest und stimmen unseren Behandlungsplan darauf ab.
+                Durch die Medizinische Massage wird die verspannte Muskulatur gelockert, Schmerzen werden gelindert und die Durchblutung im Gewebe wird verbessert. Zudem ist eine positive Beeinflussung von Herzschlag, Atmung, Verdauung, Stoffwechsel und Blutdruck möglich und es werden Endorphine (Glückshormone) ausgeschüttet. Diese stärken das Immunsystem und führen zu einem Abbau von Stresszuständen.
             </p>
-            <p>
-                Gesundheit ist mehr als das Freisein von Krankheiten und Gebrechen. Als PhysiotherapeutInnen helfen wir
-                Ihnen, Ihr körperliches, geistiges und soziales Wohlbefinden zu erlangen und zu erhalten.
-            </p>
-            <ul>
-                <li>Aktive und passive Bewegungstherapie</li>
-                <li>Manuelle Therapietechniken (Maitland, Samt)</li>
-                <li>Sportphysiotherapie</li>
-                <li>Medizinische Trainingstherapie (MTT)</li>
-                <li>Leistungsdiagnostik auf Anfrage</li>
-                <li>Konservative und postoperative Rehabilitation</li>
-                <li>Lymphdrainage</li>
-                <li>Manuelle Triggerpunkttherapie</li>
-                <li>Kinesiotaping</li>
-                <li>Medizinische Massage</li>
-                <li>Physikalische Anwendungen (Elektrotherapie, Ultraschall, Wärmeanwendungen)</li>
-            </ul>
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
     </div>
@@ -105,9 +83,8 @@
                 <div class="fa-icon">
                     <i class="icon fa-icon fa fa-medkit"></i>
                 </div>
-                <h1>Ärztliche Verordnung</h1>
-                <p>Behandlungskosten werden auf ärztliche Verordnung von der Krankenkasse oder Unfallversicherung
-                    übernommen.</p>
+                <h1>Behandlungskosten</h1>
+                <p>Behandlungskosten können in der Regel über die Zusatzversicherung abgerechnet werden. Wir sind EMR und ASCA anerkannt.</p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -116,7 +93,7 @@
                     <i class="icon fa-icon fa fa-dollar"></i>
                 </div>
                 <h1>Selbstzahlende</h1>
-                <p>Eine Behandlung, die nicht über die Kasse abgerechnet wird, kostet Fr. 55.- für 25 Minuten.</p>
+                <p>Eine Behandlung, die nicht über die Kasse abgerechnet wird, kostet Fr. 55.- für 25 Minuten und Fr. 110.- für 50 Minuten.</p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -125,7 +102,7 @@
                     <i class="icon fa-icon fa fa-gift"></i>
                 </div>
                 <h1>Gutscheine</h1>
-                <p>Behandlungen wie z.B. medizinische Massagen können auch verschenkt werden (Fr. 55.- für 25 Minuten).</p>
+                <p>Behandlungen können auch verschenkt werden (Fr. 55.- für 25 Minuten und Fr. 110.- für 50 Minuten). </p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -134,7 +111,7 @@
                     <i class="icon fa-icon fa fa-clock-o"></i>
                 </div>
                 <h1>Therapiedauer</h1>
-                <p>Eine Therapiesitzung dauert in der Regel 20-25 Minuten.</p>
+                <p>Eine Therapiesitzung dauert 25 oder 50 Minuten.</p>
             </div>
         </div>
         <div class="footer col-xs-12">
