--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -38,6 +38,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="physio.html">Physio</a></li>
+                <li><a href="medizinische-massage.html">Med. Massage</a></li>                
                 <li><a href="fitness.html">Fitness</a></li>
                 <li class="active"><a href="team.html">Team</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
@@ -124,7 +125,7 @@
     <div class="row">
         <div class="col-lg-2 col-xs-3">Seit 2016</div>
         <div class="col-xs-9">
-            Sportwissenschaftler Movimento Physio-und Trainingstherapie GmbH Oberdorf
+            Sportwissenschaftler Movimento Physio- und Trainingstherapie GmbH Oberdorf
         </div>
     </div>
     <div class="row">
