Remove special opening hours Auffahrt

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             <div class="new well">
                 <h1 class="hidden">Längere Öffnungszeiten</h1>
                 <p class="hidden">Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
-                <h1>Auffahrt und Pfingsten</h1>
-                <p>Auffahrts-Donnerstag, 25.5. und Pfingstmontag, 5.6.2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a> Besten Dank für Ihr Verständnis!</p>
+                <h1>Pfingsten</h1>
+                <p>Pfingstmontag, 5.6.2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a></p>
             </div>
         </div>
         <div class="hidden col-sm-6">
