Add 1. August opening hours

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
             <div class="new well">
                 <h1 class="hidden">Längere Öffnungszeiten</h1>
                 <p class="hidden">Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
-                <h1>Pfingsten</h1>
-                <p>Pfingstmontag, 5.6.2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a></p>
+                <h1>1. August</h1>
+                <p>Am 1. August 2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a></p>
             </div>
         </div>
         <div class="hidden col-sm-6">
@@ -283,7 +283,7 @@
                     Fotoalbum zum Baufortschritt
                 </a>
                 <h1>Neu: Medizinische Massage</h1>
-                <p>Ab 10. Juni bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. Krankenkassenanerkannt (EMR / ASCA)</p>
+                <p>Neu bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. Krankenkassenanerkannt (EMR / ASCA)</p>
             </div>
         </div>
         <div class="col-sm-6">
@@ -292,7 +292,7 @@
                 <h1>Neu: Medizinische Massage</h1>
                 <p>Lockerung und Stressabbau, krankenkassenanerkannt.
                     <br/>
-                    Ab 10. Juni jeweils samstags.
+                    Neu jeweils samstags.
                 </p>
                 <br/>
                 <a class="more" href="medizinische-massage.html" role="button">
