--- a/index.html
+++ b/index.html
@@ -275,18 +275,16 @@
                 <p>Am 1. August 2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a></p>
             </div>
         </div>
-        <div class="hidden col-sm-6">
+        <div class="col-sm-6">
             <div class="new well">
-                <h1 class="hidden">Fotos zum Umbau</h1>
-                <p class="hidden">Verfolgen Sie den Aufbau der Räumlichkeiten:</p>
-                <a class="hidden" href="https://goo.gl/photos/giXixUpqZRUgd7Zf8" role="button" target="_blank">
-                    Fotoalbum zum Baufortschritt
+                <h1>Sommerspecial Fitness im Juli</h1>
+                <p>Trainieren Sie einen Monat zum Spezialpreis.</p>
+                <a href="docs/Sommeraktion.pdf" role="button" target="_blank">
+                    Details
                 </a>
-                <h1>Neu: Medizinische Massage</h1>
-                <p>Neu bietet Herr&nbsp;Dejan&nbsp;Jonovic jeweils samstags Medizinische Massage und Lymphdrainage an. Krankenkassenanerkannt (EMR / ASCA)</p>
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="hidden col-sm-6">
             <div class="new well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/massage.png"/>
                 <h1>Neu: Medizinische Massage</h1>
