Optimize mobile view

--- a/medizinische-massage.html
+++ b/medizinische-massage.html
@@ -83,7 +83,7 @@
                 <div class="fa-icon">
                     <i class="icon fa-icon fa fa-medkit"></i>
                 </div>
-                <h1>Behandlungskosten</h1>
+                <h1>Kosten</h1>
                 <p>Behandlungskosten können in der Regel über die Zusatzversicherung abgerechnet werden. Wir sind EMR und ASCA anerkannt.</p>
             </div>
         </div>
