Change news wells, optimize mobile view

--- a/index.html
+++ b/index.html
@@ -269,13 +269,11 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="new well">
-                <h1 class="hidden">Längere Öffnungszeiten</h1>
-                <p class="hidden">Seit Mitte März 2017 haben wir <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
-                <h1>1. August</h1>
-                <p>Am 1. August 2017 haben wir geschlossen. Ansonsten gelten die <a href="index.html#NeueOeffnungszeiten">regulären Öffnungszeiten.</a></p>
+                <h1>Längere Öffnungszeiten</h1>
+                <p>Wir haben <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Sommerspecial Fitness im Juli</h1>
                 <p>Trainieren Sie einen Monat zum Spezialpreis.</p>
@@ -284,13 +282,13 @@
                 </a>
             </div>
         </div>
-        <div class="hidden col-sm-6">
-            <div class="new well">
+        <div class="col-sm-6">
+            <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/massage.png"/>
-                <h1>Neu: Medizinische Massage</h1>
+                <h1>Medizinische Massage</h1>
                 <p>Lockerung und Stressabbau, krankenkassenanerkannt.
                     <br/>
-                    Neu jeweils samstags.
+                    Jeweils samstags.
                 </p>
                 <br/>
                 <a class="more" href="medizinische-massage.html" role="button">
