Edit description of opening hours

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
     </div>
     <div class="row">
         <div class="col-sm-6">
-            <div class="new well">
+            <div class="well">
                 <h1>Längere Öffnungszeiten</h1>
-                <p>Wir haben <a href="#NeueOeffnungszeiten" class="preliminary">länger für Sie geöffnet!</a>                
+                <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
             </div>
         </div>
         <div class="col-sm-6 hidden">
