--- a/index.html
+++ b/index.html
@@ -267,19 +267,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="well">
                 <h1>Längere Öffnungszeiten</h1>
                 <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
             </div>
         </div>
-        <div class="col-sm-6 hidden">
+        <div class="col-sm-6">
             <div class="new well">
-                <h1>Sommerspecial Fitness im Juli</h1>
-                <p>Trainieren Sie einen Monat zum Spezialpreis.</p>
-                <a href="docs/Sommeraktion.pdf" role="button" target="_blank">
-                    Details
-                </a>
+                <h1>1.9.2017 nur bis 19:00 Uhr</h1>
+                <p>Wegen eines Teamanlasses haben wir am Fr, 1.9.2017 nur bis 19:00 Uhr geöffnet.</p>
+                <a href="docs/Teamanlass.pdf" role="button" target="_blank">PDF...</a>
             </div>
         </div>
         <div class="col-sm-6">
