--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
         </div>
         <div class="col-sm-6">
             <div class="new well">
-                <h1>1.9.2017 nur bis 19:00 Uhr</h1>
-                <p>Wegen eines Teamanlasses haben wir am Fr, 1.9.2017 nur bis 19:00 Uhr geöffnet.</p>
+                <h1>01.09.2017 bis 19:00 Uhr</h1>
+                <p>Wegen eines Teamanlasses haben wir am Fr, 01.09.2017 nur bis 19:00 Uhr geöffnet.</p>
                 <a href="docs/Teamanlass.pdf" role="button" target="_blank">PDF...</a>
             </div>
         </div>
