--- a/index.html
+++ b/index.html
@@ -284,9 +284,7 @@
             <div class="well">
                 <img class="icon col-lg-3 col-md-4 col-sm-4 col-xs-3" src="img/massage.png"/>
                 <h1>Medizinische Massage</h1>
-                <p>Lockerung und Stressabbau, krankenkassenanerkannt.
-                    <br/>
-                    Jeweils samstags.
+                <p>Lockerung und Stress&shy;ab&shy;bau, kran&shy;ken&shy;kas&shy;sen&shy;an&shy;er&shy;kannt. Jeweils samstags.
                 </p>
                 <br/>
                 <a class="more" href="medizinische-massage.html" role="button">
