--- a/fitness.html
+++ b/fitness.html
@@ -137,14 +137,14 @@
                             </div>
                             <div class="modal-body">
                                 <p>
-                                    Mit einem Abo dürfen Sie während den Geschäftsöffnungszeiten uneingeschränkt
-                                    selbständig trainieren.
+                                    Mit einem Abo dürfen Sie während den Geschäfts&shy;öffnungs&shy;zeiten uneingeschränkt
+                                    selbständig trainieren. Das Mittagsabo hingegen berechtigt zum Training aus&shy;schliess&shy;lich an Wochentagen (Mo-Fr) zwischen 11 und 16 Uhr. 
                                 </p>
                                 <p>In einem Einführungstraining von 1.5 h stellen wir Ihnen alle Geräte vor und arbeiten
                                    zusammen einen Trainingsplan aus. Nach diesem ersten Training sind regelmässige
                                     Kontrolltrainings im Abo-Preis inbegriffen.
                                 </p>
-                                <h1>Preise</h1>
+                                <h1 id="preise">Preise</h1>
                                 <table>
                                     <tr>
                                         <td>3 Monate:&nbsp;</td>
@@ -163,6 +163,8 @@
                                         <td align="right">Fr. 1380.–</td>
                                     </tr>
                                 </table>
+                                <br/>
+                                <p>Mittagsabo: 30% Rabatt auf obige Preise. </p>
                                 <h1>Infos</h1>
                                 <ul>
                                     <li>Vermittlungsrabatt: 10%<br/></li>
