--- a/index.html
+++ b/index.html
@@ -267,17 +267,19 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="well">
                 <h1>Längere Öffnungszeiten</h1>
                 <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
             </div>
         </div>
-        <div class="col-sm-6 hidden">
+        <div class="col-sm-6">
             <div class="new well">
-                <h1>01.09.2017 bis 19:00 Uhr</h1>
-                <p>Wegen eines Teamanlasses haben wir am Fr, 01.09.2017 nur bis 19:00 Uhr geöffnet.</p>
-                <a href="docs/Teamanlass.pdf" role="button" target="_blank">PDF...</a>
+                <h1>Mittagsabo: 30% Rabatt</h1>
+                <p>Das neue Mittagsabo berechtigt zum Training Montag-Freitag 11-16 Uhr.</p>
+                <a class="more" href="fitness.html#preise" role="button">
+                    Mehr&hellip;
+                </a>
             </div>
         </div>
         <div class="col-sm-6">
