Add Florina, rename oeffnungszeiten title

--- a/florina-marquez.html
+++ b/florina-marquez.html
@@ -106,13 +106,13 @@
         </div>
     </div>
     <div class="row section">
-        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/ursula.jpg"/>
+        <img class="col-lg-2 col-sm-6 col-xs-12" src="img/florina.jpg"/>
         <div class="col-lg-10 col-sm-6 col-xs-12">
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
-            <h2>Ursula&nbsp;Hövelmann</h2>
-            <p>Physiotherapeutin (Bachelor NL / Master of Profession)<br/>
-            <a href="mailto:ursula.hoevelmann@physiomovimento.ch">E-Mail</a></p>
+            <h2>Florina&nbsp;Marquez</h2>
+            <p>PDipl.&nbsp;Physiotherapeutin&nbsp;HF<br/>
+            <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
     <div class="row section">
@@ -125,25 +125,16 @@
         <div class="col-xs-9">Movimento Physio-und Trainingstherapie GmbH Oberdorf</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2016</div>
-        <div class="col-xs-9">Kreiskrankenhaus Rheinfelden</div>
+        <div class="col-lg-2 col-xs-3">2011-2012</div>
+        <div class="col-xs-9">Ausbildnerin in Fussreflexzonenmassage Tao Chi Zürich</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2013-2015</div>
-        <div class="col-xs-9">Physiogalerie Castrop Rauxel, Fachliche Leitung</div>
+        <div class="col-lg-2 col-xs-3">2008-2013</div>
+        <div class="col-xs-9">Abteilung Intensivstation Universitätsspital Zürich</div>
     </div>
     <div class="row">
-        <div class="col-lg-2 col-xs-3">2007-2013</div>
-        <div class="col-xs-9">
-           Therapiezentrum Novotergum. Fachliche Leitung und Zentrumsmanagerin
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 col-xs-3">2005-2006</div>
-        <div class="col-xs-9">
-           Tätigkeit in Privatpraxis Funk und Rannacher. Schwerpunkte jeweils Orthopädie, Chirurgie, Onkologie, Rheumatologie.
-
-        </div>
+        <div class="col-lg-2 col-xs-3">2007</div>
+        <div class="col-xs-9">Chirurgische Abteilung Stadtspital Triemli Zürich</div>
     </div>
 
     <div class="row section">
@@ -153,16 +144,12 @@
     </div>
     <div class="row">
         <ul>
-            <li>2017 Beginn Heilpraktiker-Ausbildung (Erlernen der Naturheilkunde)</li>
-            <li>diverse Lehrgänge Chiropraktik</li>
-            <li>Basiskurs Golf-Physiotherapie</li>
-            <li>Skoliosebehandlung nach Schroth</li>
-            <li>Kinesiotaping/stabilisierendes Taping</li>
-            <li>Schmerzpsychologische Grundlagen bei chron. Rückenschmerzpatienten</li>
-            <li>Master of Profession Manuelle Therapie SOMT (evidence based practice)</li>
-            <li>Gerätegestützte Krankengymnastik (KGG)</li>
-            <li>Lympdrainage und Ödemtherapie</li>
-            <li>Bachelor of Health in Physiotherapie Hogeschool van Utrecht, Holland 2004</li>
+            <li>2018 Beginn CAS Expertise in der Pädiatrischen Physiotherapie ZHAW</li>
+            <li>Reflektierte Praxis-Wissenschaft ZHAW</li>
+            <li>Erwachsenenbildnerin SVEB 1</li>
+            <li>Fussreflexzonentherapie</li>
+            <li>Atmungstherapie Schwerpunkt Auskultation und therapeutisches Management</li>
+            <li>Diplom Physiotherapie Stadtspital Triemli Zürich 2007</li>
         </ul>
     </div>
     <div class="row">
