--- a/kontakt.html
+++ b/kontakt.html
@@ -101,7 +101,7 @@
                         target="_blank">Lizenz</a>)
                 </div>
             </div>
-            <h2>Geschäftsöffnungszeiten</h2>
+            <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
