--- a/reto-maurer.html
+++ b/reto-maurer.html
@@ -187,7 +187,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Geschäftsöffnungszeiten</h2>
+            <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
