--- a/team.html
+++ b/team.html
@@ -187,6 +187,26 @@
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
                     <p>
+                    <h1>Florina&nbsp;Marquez</h1>
+                    <p>
+                        Dipl.&nbsp;Physiotherapeutin&nbsp;HF
+                    </p>
+                    <p>
+                        <a href="mailto:info@physiomovimento.ch">E-Mail</a>
+                    </p>
+                    <p>
+                        <a href="florina-marquez.html" role="button">
+                            Mehr&hellip;
+                        </a>
+                    </p>
+                </div>
+                <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/florina.jpg">
+            </div>
+        </div>        
+        <div class="col-sm-6 col-xs-12">
+            <div class="portrait-well">
+                <div class="col-md-5 col-xs-12">
+                    <p>
                     <h1>Dejan&nbsp;Jonovic</h1>
                     <p>
                         Medizinischer&nbsp;Masseur IKMP
@@ -201,6 +221,8 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/dejan.jpg">
             </div>
         </div>
+    </div>
+    <div class="row">    
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
@@ -216,9 +238,6 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/vera.jpg">
             </div>
         </div>
-        
-    </div>
-    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
@@ -234,6 +253,8 @@
                 <img class="portrait col-md-push-3 col-md-4 col-xs-12" src="img/nazmije.jpg">
             </div>
         </div>
+    </div>
+    <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div class="portrait-well">
                 <div class="col-md-5 col-xs-12">
@@ -250,7 +271,7 @@
             </div>
         </div>
     </div>
-    <div class="row">
+
         <div class="col-xs-12">
             <a class="termin pull-right" href="kontakt.html" role="button">Jetzt einen Termin vereinbaren</a>
         </div>
@@ -263,7 +284,7 @@
                 061 963 00 23<br/>
                 <a href="mailto:info@physiomovimento.ch">info@physiomovimento.ch</a>
             </p>
-            <h2>Geschäftsöffnungszeiten</h2>
+            <h2>Öffnungszeiten</h2>
             <p>Bitte beachten Sie die <a href="index.html#NeueOeffnungszeiten">aktuellen Öffnungszeiten.</a></p>  
         </div>
     </div>
