--- a/florina-marquez.html
+++ b/florina-marquez.html
@@ -111,7 +111,7 @@
             <!-- reactive vertical space -->
             <div class="hidden-md hidden-sm hidden-xs">&nbsp;</div>
             <h2>Florina&nbsp;Marquez</h2>
-            <p>PDipl.&nbsp;Physiotherapeutin&nbsp;HF<br/>
+            <p>Dipl.&nbsp;Physiotherapeutin&nbsp;HF<br/>
             <a href="mailto:info@physiomovimento.ch">E-Mail</a></p>
         </div>
     </div>
