Add infos and docs for Christmas 2017

--- a/index.html
+++ b/index.html
@@ -273,13 +273,21 @@
                 <p>Seit März haben wir <a href="#NeueOeffnungszeiten">länger für Sie geöffnet!</a>                
             </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 hidden">
             <div class="new well">
                 <h1>Mittagsabo: 30% Rabatt</h1>
                 <p>Das neue Mittagsabo berechtigt zum Training Montag-Freitag 11-16 Uhr.</p>
                 <a class="more" href="fitness.html#preise" role="button">
                     Mehr&hellip;
                 </a>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="new well">
+                <!--h1>Aktuell</h1-->
+                Bitte beachten Sie die <a href="docs/Spezielle-Oeffnungszeiten-Weihnachten-Neujahr-2017.pdf" target="_blank" class="new"><b>spe&shy;ziel&shy;len Öff&shy;nungs&shy;zei&shy;ten über die Festtage</b></a>.<br/><br/>
+                Suchen Sie noch ein Weih&shy;nachts&shy;ges&shy;chenk? <a href="docs/Geschenkgutscheine.pdf" class="new" target="_blank"><b>Unsere Gutscheine sind die Lösung!</b></a><br/><br/>
+                Trainieren Sie bei uns am 17.12. wäh&shy;rend des Weih&shy;nachts&shy;zau&shy;ber-<wbr>Sonn&shy;tags&shy;ver&shy;kaufs, und <a href="docs/Weihnachtszauber-2017.pdf" class="new" target="_blank"><b>stossen Sie mit uns bei Guetzli und Glühwein an!</b></a><br/>
             </div>
         </div>
         <div class="col-sm-6">
