--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <!--h1>Aktuell</h1-->
                 Bitte beachten Sie die <a href="docs/Spezielle-Oeffnungszeiten-Weihnachten-Neujahr-2017.pdf" target="_blank" class="new"><b>spe&shy;ziel&shy;len Öff&shy;nungs&shy;zei&shy;ten über die Festtage</b></a>.<br/><br/>
                 Suchen Sie noch ein Weih&shy;nachts&shy;ges&shy;chenk? <a href="docs/Geschenkgutscheine.pdf" class="new" target="_blank"><b>Unsere Gutscheine sind die Lösung!</b></a><br/><br/>
-                Trainieren Sie bei uns am 17.12. wäh&shy;rend des Weih&shy;nachts&shy;zau&shy;ber-<wbr>Sonn&shy;tags&shy;ver&shy;kaufs, und <a href="docs/Weihnachtszauber-2017.pdf" class="new" target="_blank"><b>stossen Sie mit uns bei Guetzli und Glühwein an!</b></a><br/>
+                Auch wir haben am 17.12. wäh&shy;rend des <a href="docs/Weihnachtszauber-2017.pdf" class="new" target="_blank"><b>Weih&shy;nachts&shy;zau&shy;ber-<wbr>Sonn&shy;tags&shy;ver&shy;kaufs</b></a> geöffnet. Stossen sie bei Guetzli und Glühwein mit uns an!
             </div>
         </div>
         <div class="col-sm-6">
